TileOffset renamed to Offset.